@@ -173,7 +173,6 @@ $(tree-share-prefix)/mf-link-tree link-mf-tree: $(tree-share-prefix)/lilypond-fo
 	-cd $(tree-share-prefix)/fonts/type1 && \
 		ln -s ../../../../../../mf/$(outconfbase)/*.pfa .
 
-
 TAGS.make: dummy
 	etags -o $@ $(find $(srcdir) -name 'GNUmakefile*' -o -name '*.make')
 
